# cross_noughts

./: CMakeLists.txt  Project_cross_noughts_kurs.cpp  Project_cross_noughts_kurs.rc  Project_cross_noughts_kurs.sln  Project_cross_noughts_kurs.vcxproj  Project_cross_noughts_kurs.vcxproj.filters  README.md  Resource.h  framework.h  fun.cpp  fun.h
